# hello-beomsan

./: .env.example  .gitignore  .mise.toml  CLAUDE.md  Dockerfile  Dockerfile.dev  Makefile  README.md  SECURITY.md  dev-setup.bat  dev-start.bat  docker-compose.yml  fly.toml  litefs.yml  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_comprehensive.py  test_error_handling.py  test_models_complete.py  test_songs.csv  test_views_complete.py
.github/workflows/: fly.yml
accounts/: services.py  tests.py  urls.py  views.py
apps/accounts/: tests.py  urls.py  views.py
apps/tournament/: admin.py  models.py  services.py  tests.py  urls.py  views.py
apps/tournament/migrations/: 0002_song_tournament_wins.py  0003_song_song_tournament_wins_idx_and_more.py  0004_add_performance_indexes.py  0006_add_performance_indexes.py  0007_add_fibonacci_indexes.py
apps/tournament/views/: __init__.py  admin_songs.py  admin_tournaments.py  admin_users.py  health.py  public.py  stats.py  utils.py
config/: asgi.py  settings.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  development.py  production.py  testing.py
core/: exceptions.py
core/services/: accounts_service.py  tournament_service.py
core/utils/: helpers.py  security.py
hello_beomsan/: asgi.py  settings.py  urls.py  wsgi.py
requirements/: base.txt  development.txt  production.txt  testing.txt
templates/: base.html
templates/admin/: edit_song.html  manage_songs.html  session_detail.html  tournament_history.html  tournament_manage.html  upload_csv.html  upload_song.html  user_manage.html
templates/base/: base.html
templates/components/: pagination.html  progress_bar.html  song_card.html
templates/main/: completed.html  home.html  start_game.html  stats.html  vote.html
templates/tournament/: match_vote.html  tournament_detail.html  tournament_list.html
tests/: test_anonymous_voting.py  test_comprehensive.py  test_error_handling.py  test_models_complete.py  test_result_screen.py  test_session_logic.py  test_user_manage.py  test_user_management_django.py  test_user_management_fixes.py  test_views_complete.py
tournament/: admin.py  file_handlers.py  models.py  services.py  urls.py  views.py
tournament/migrations/: 0001_initial.py  0005_rename_artist_to_original_song.py
(+26 files in other folders)
