[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-beomsan"
version = "1.0.0"
description = "Song Tournament Voting System - World Cup style elimination brackets"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Garalulu", email = "pso9809@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django :: 5.2",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.5,<6.0",
    "gunicorn>=23.0.0",
    "requests>=2.32.3",
    "django-cors-headers>=4.6.0",
    "whitenoise>=6.8.2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-django>=4.5.2",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "django-debug-toolbar>=4.2.0",
    "django-extensions>=3.2.3",
]

[project.urls]
Homepage = "https://hello-beomsan.fly.dev"
Repository = "https://github.com/Garalulu/hello-beomsan"
Issues = "https://github.com/Garalulu/hello-beomsan/issues"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_django = "django"
known_first_party = "hello_beomsan,tournament,accounts"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "hello_beomsan.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--cov=. --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true